--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,18 @@ name = "rsm"
 version = "0.1.0"
 authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
 
+[features]
+sync = ["native-tls", "json", "bufstream"]
+
 [dependencies]
 libc = "0.2.43"
 clap = "2.32.0"
 failure = "0.1.2"
 log = "0.4.4"
-fern = "0.5.6"
 sqlite = "0.23.9"
 mktemp = "0.3.1"
 ansi_term = "0.11.0"
 time = "0.1"
+native-tls = { version = "0.2.1", optional = true }
+json = { version = "0.11.13", optional = true }
+bufstream = { version = "0.1.3", optional = true }
